serving-sample/configration_route/route-spring-v4.yml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: spring-boot-web
  namespace: default
spec:
  traffic: 
  - percent: 100
    revisionName: spring-boot-web-v4
